appId: ${PACKAGE_ID}
---

- tapOn: "Debit Card"

- tapOn: 
    id: ${output.topupPage.debitCardPage.amountTextBox}

- inputText: ${TOP_UP_AMOUNT}

- tapOn: 
    id: ${output.topupPage.debitCardPage.topUpButton}

- extendedWaitUntil:
    visible: "Processing"
    timeout: 90000

- assertVisible: "Your transaction is being processed. This might take a few seconds. We will send a notification when it’s done, but you can also check your wallet balance or transaction history."

- tapOn: "Close"